html format updated

--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Frontend Mentor | Expenses chart component</title>
-
 </head>
 <body>
   <main>
 
     <div class="card">
-
       <header class="flex">
         <div class="balance">
           <p>My balance</p>
@@ -25,41 +22,7 @@
       <div class="card-content">
         <h1>Spending - Last 7 days</h1>
         <div class="chart flex">
-          <div class="mon">
-            <div class="value"></div>
-            <div class="bar"></div>
-            <p></p>
-          </div>
-          <div class="tue">
-            <div class="value"></div>
-            <div class="bar"></div>
-            <p></p>
-          </div>
-          <div class="wed">
-            <div class="value"></div>
-            <div class="bar"></div>
-            <p></p>
-          </div>
-          <div class="thu">
-            <div class="value"></div>
-            <div class="bar"></div>
-            <p></p>
-          </div>
-          <div class="fri">
-            <div class="value"></div>
-            <div class="bar"></div>
-            <p></p>
-          </div>
-          <div class="sat">
-            <div class="value"></div>
-            <div class="bar"></div>
-            <p></p>
-          </div>
-          <div class="sun">
-            <div class="value"></div>
-            <div class="bar"></div>
-            <p></p>
-          </div>
+          <!--  -->
         </div>
         <hr>
         <div class="amount-this-month flex">
@@ -73,7 +36,6 @@
           </div>
         </div>
       </div>
-
     </div>
 
   </main>
